add bg color to  add product page and edit product

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -18,13 +18,13 @@
          border: 1px  solid ;
       } */
       body {
-        background-color: #f8f9fa;
+        background-color: #4D869C;
       }
       .container {
         margin-top: 30px;
       }
       .form-container {
-        background-color: #fff;
+        background-color: #eef7ff !important;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -54,6 +54,34 @@
         padding: 0 6px;
         font-size: 14px;
       }
+
+      li ,a {
+        color:  #eef7ff !important;
+        text-decoration: none;
+      }
+
+      h1 , label,h3 {
+        color: #4D869C !important;
+      
+      }
+
+      input,select,textarea{
+        border: 1px solid #4D869C !important;
+        color: #4D869C !important;
+        outline: none !important;
+      }
+
+      button{
+        color: #eef7ff !important;
+        outline: none !important;
+        background-color: #4D869C !important;
+      }
+
+
+     
+
+
+      
     </style>
   </head>
   <body>
@@ -88,7 +116,7 @@
     <div class="container">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
+          <li class="breadcrumb-item"><a href="/admin"><b>Dashboard</b></a></li>
           <li class="breadcrumb-item active" aria-current="page">
             Add Product
           </li>
