--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -8,13 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.13/dist/cropper.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
-        }
+        background-color: #4D869C;
+      }
         .container {
             margin-top: 30px;
         }
         .form-container {
-            background-color: #fff;
+            background-color: #eef7ff !important;
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -44,6 +44,32 @@
             padding: 0 6px;
             font-size: 14px;
         }
+
+
+        li ,a {
+        color:  #eef7ff !important;
+        text-decoration: none;
+      }
+
+      h1 , label,h3 {
+        color: #4D869C !important;
+      
+      }
+
+
+      input,select,textarea{
+        border: 1px solid #4D869C !important;
+        color: #4D869C !important;
+        outline: none !important;
+      }
+
+      button{
+        color: #eef7ff !important;
+        outline: none !important;
+        background-color: #4D869C !important;
+      }
+
+
     </style>
 </head>
 <body>
