--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -363,11 +363,34 @@
     }
 
     if (paymentMethod.value === 'Online') {
-      
-      initiateRazorpayPayment();
+      Swal.fire({
+       title: 'Confirm Order',
+       text: 'Are you sure you want to place this order with Razorpay?',
+       icon: 'question',
+       showCancelButton: true,
+       confirmButtonColor: '#3085d6',
+       cancelButtonColor: '#d33',
+       confirmButtonText: 'Yes, proceed with payment!'
+      }).then((result) => {
+        if (result.isConfirmed) {
+          initiateRazorpayPayment();
+        }
+      });
     } else {
       
-      proceedWithCheckout();
+      Swal.fire({
+      title: 'Confirm Order',
+      text: 'Are you sure you want to place this order with Cash on Delivery?',
+      icon: 'question',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, place order!'
+    }).then((result) => {
+      if (result.isConfirmed) {
+        proceedWithCheckout();
+      }
+    });
     }
   });
 
